# addrforge

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/addrforge/: __init__.py  cli.py  data.py  errors.py  format.py  lines.py  models.py  normalize.py  parser.py  patterns.py  validation.py
tests/: test_cli.py  test_fixtures.py  test_format.py  test_lines.py  test_normalize.py  test_parser.py  test_smoke.py  test_validation.py
tests/fixtures/: addresses.json
