[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "addrforge"
version = "0.1.0"
description = "Dependency-free US address parser and normalizer"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{name = "addrforge contributors"}]
keywords = ["address", "parser", "normalization", "usps"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
]
dependencies = []

[project.urls]
Homepage = "https://example.com/addrforge"

[project.scripts]
addrforge = "addrforge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
