[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "addrforge"
version = "0.1.0"
description = "Dependency-free US address parser and normalizer"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "addrforge contributors"}]
keywords = ["address", "parser", "normalization", "usps"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/RohitMadhu/addrforge"
Repository = "https://github.com/RohitMadhu/addrforge"
Issues = "https://github.com/RohitMadhu/addrforge/issues"

[project.scripts]
addrforge = "addrforge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
